front_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
  labels:
    app: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
        - name: angular
          image: mohammadsadeghmontazeri/hello:latest # angular_image_tmp:latest  # Update with your image
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 2000m
              ephemeral-storage: 3000Mi
              memory: 3000Mi
            requests:
              cpu: 2000m
              ephemeral-storage: 2000Mi
              memory: 2000Mi
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  labels:
    app: angular
spec:
  type: NodePort # You can use ClusterIP or NodePort as well
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
  selector:
    app: angular
