web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: mohammadsadeghmontazeri/starback:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              ephemeral-storage: 1000Mi
              memory: 1000Mi
            requests:
              cpu: 100m
              ephemeral-storage: 100Mi
              memory: 100Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  labels:
    app: web-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080 # Specify a custom port in the range 30000-32767, or let Kubernetes assign one automatically
  selector:
    app: web-app
